WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222109
[WPE] User-Agent quirks not implemented
https://bugs.webkit.org/show_bug.cgi?id=222109
Summary
[WPE] User-Agent quirks not implemented
Philippe Normand
Reported
2021-02-18 08:49:32 PST
We should share more code between GTK and WPE regarding UA quirks handling: - create WebPageProxyGLib and move quirks handling from WebPageProxyGTK to that new code unit? - make WebPageProxyWPE use WebPageProxyGLib, somehow - same on WebProcess side for WebPageFoo
Attachments
Patch
(13.17 KB, patch)
2021-02-18 11:01 PST
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Patch
(13.19 KB, patch)
2021-02-18 11:05 PST
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2021-02-18 11:01:28 PST
Created
attachment 420848
[details]
Patch
Michael Catanzaro
Comment 2
2021-02-18 11:05:17 PST
Created
attachment 420850
[details]
Patch
EWS
Comment 3
2021-02-19 01:03:58 PST
Committed
r273131
: <
https://commits.webkit.org/r273131
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420850
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug